TPLABC-25 #resolve Added text-stroke for better legibility of Quicksand font in Google Chrome for Windows

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -5,6 +5,10 @@ body{
 
 /************* Header *******************************************************/
 
+h1, h2, h3, h4, h5, h6 {
+	-webkit-text-stroke-width: 0.5px;
+}
+
 #header{
 	background-color:@color_two;
 	color: white;
@@ -78,6 +82,7 @@ nav#bottom-menu {
 /****** menu ******/
 ul.nav li {
 	font-family: 'Quicksand';
+	-webkit-text-stroke-width: 0.5px;
 }
 
 .navbar .nav{
@@ -657,6 +662,7 @@ aside .moduletext_ms1,
 .moduletext_ms2 a{
 	color: white;
 	font-family: 'Quicksand';
+	-webkit-text-stroke-width: 0.5px;
 }
 
 .module_ms2 h3,
@@ -911,6 +917,7 @@ h4 a{
 	color: #333;
 }
 .readmore a{
+	-webkit-text-stroke-width: 0.5px;
 	font-family: 'Quicksand';
 	background-color: transparent;
 	background-image: url(../../images/flag-red.png);
@@ -1069,6 +1076,7 @@ li{
 }
 #breadcrumbs{
 	font-family: 'Quicksand';
+	-webkit-text-stroke-width: 0.5px;
 }
 #breadcrumbs .icon-caret-right:before{
 	content:"";
